--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
 
     <div class="broker-section">
-        <p>Best Broker for this Strategy:</p>
+        <p>Best Broker</p>
         <a href="https://poaffiliate.onelink.me/t5P7/ebew5vrm" target="_blank" class="btn-broker">Open Free Account</a>
     </div>
 
