--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <a href="https://www.tiktok.com/@saddamfxtrader_official" target="_blank" class="social-btn tiktok">TikTok</a>
         <a href="https://github.com/saddamfxco" target="_blank" class="social-btn github">GitHub</a>
         <a href="https://www.linkedin.com/in/saddamfxtrader/" target="_blank" class="social-btn linkedin">LinkedIn</a>
-        <a href="#" target="_blank" class="social-btn instagram">Instagram</a>
+        <a href="https://www.instagram.com/saddamfxtrader?igsh=MWkwZDYyOXlndmVoaA==" target="_blank" class="social-btn instagram">Instagram</a>
         <a href="#" target="_blank" class="social-btn x">X</a>
         <a href="#" target="_blank" class="social-btn onlyfans">OnlyFans</a>
     </div>
